[package]
name = "ruva-core"
version = "0.20.0"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven TEvent Handling"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruva-macro= {version="0.19.4", path="../ruva-macro"}
downcast-rs ="2.0.1"


tokio = { version = "1.44.0", features = ["macros","sync","rt"] }
serde = {version="1.0.219",features=["derive"]}
serde_json = "1.0.140"
uuid = { version = "1.15", features = ["v4"]}
chrono = {version="0.4.40"}
async-trait = {version="0.1.87"}
futures="0.3"

tracing="0.1.37"
hashbrown = "0.15"
async-recursion="1"
sqlx = {version="0.8.1" ,features = ["runtime-tokio-rustls",
    "migrate",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "rust_decimal"],optional=true}
backtrace = { version = "0.3.73", optional = true}
utoipa = { version = "5", optional = true }
opentelemetry = "0.28.0"

[dev-dependencies]
tokio = { version = "1.39.0", features = [ "macros","sync","rt","time","rt-multi-thread"] }

[features]
backtrace = ["dep:backtrace"]
tracing=[]
sqlx-postgres = ["sqlx"]
utoipa = ["dep:utoipa"]
